mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-sql
  namespace: backend
  labels:
    app: my-sql
spec:
  nodeSelector:
    node: C
  containers:
  - name: mysql
    image: mysql:8.0
    ports:
    - containerPort: 3306
    resources:
      requests:
        cpu: 200m
        memory: 256Mi
